API - Server Deploy#2
Updated with log paging